add rate slider to setting dialog but not working

--- a/qml.qrc
+++ b/qml.qrc
@@ -260,5 +260,6 @@
         <file>icons/Pulsar/icons8-video-stabilization-96.png</file>
         <file>icons/Pulsar/icons8-video-file-96.png</file>
         <file>icons/Pulsar/icons8-advanced-search-96.png</file>
+        <file>RateControlSlider.qml</file>
     </qresource>
 </RCC>
