releas 1.12.0 add buttonToolTip.qml file and set app icon

--- a/qml.qrc
+++ b/qml.qrc
@@ -72,5 +72,10 @@
         <file>icons/Pulsar/icons8-repeat-96 (3).png</file>
         <file>icons/Pulsar/icons8-repeat-96 (2).png</file>
         <file>icons/Pulsar/icons8-audio-file-96.png</file>
+        <file>ButtonToolTip.qml</file>
+        <file>icons/icons8-circled-play-96 (4).png</file>
+        <file>icons/icons8-circled-play-96 (3).png</file>
+        <file>icons/icons8-circled-play-96 (2).png</file>
+        <file>icons/icons8-circled-play-96 (1).png</file>
     </qresource>
 </RCC>
